# cgr-tc4

./: meson.build
files/: Panela (CGR) not legacy.mtl  Panela.mtl  cube.mtl  trabalho cgr.blend
include/: App.hpp  OBJModel.hpp  model.h
src/: App.cpp  CreateOBJ.cpp  OBJModel.cpp  main.c  main.cpp  model.c
